--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A simple CRUD api for an inventory ",
   "main": "server.js",
   "scripts": {
-    "start":"NODE_ENV=production node server",
-    "dev":"nodemon server",
+    "start": "NODE_ENV=production node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Amardeep Ganguly",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
